<resources>
    <string name="app_name">WhoBuys Light</string>
    <string name="session_page">http://www.whobuys.ru/whobuys_light_sessioner.php</string>
    <string name="controller_page">http://www.whobuys.ru/whobuys_light_controller.php</string>
    <string name="title_activity_active_lists">Your active lists</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="history">History</string>
    <string name="active">Active</string>
    <string name="login">Login</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="id">id</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="registration">Registration</string>
    <string name="confirm_registration">Confirm</string>
    <string name="log_yourself_in">Log yourself In</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_groups">Your groups</string>
    <string name="action_settings">Settings</string>
    <string name="pick_items">Pick items</string>
    <string name="bug_report_header">Any bugs? :(</string>
    <string name="exit">exit</string>
    <string name="my_groups">Groups</string>
    <string name="any_problem">any problem</string>
    <string name="copy_your_id">copy your id</string>
    <string name="drop_history">drop history</string>
    <string name="danger_zone">Danger zone</string>
    <string name="group_down_button_string">Send new list</string>
    <string name="title_activity_group_settings">GroupSettingsActivity</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="members">Members</string>
    <string name="enter_new_user_id">Enter user id</string>
    <string name="add_user">Add user</string>
    <string name="confirm">Confirm all</string>
    <string name="no_user_id_error">Enter user id</string>
    <string name="enter_your_group_name">Enter your group name</string>
    <string name="error_no_user">No such user :(</string>
    <string name="some_error">Something went wrong</string>
    <string name="leave_group">Leave group</string>
    <string name="version">0_99</string>
    <string name="server_pie">xedgvfv</string>
    <string name="login_failed">You logged out</string>
    <string name="id_copied_informer">Your id copied</string>
    <string name="dialog_logout_question">Want to logout?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="dialog_want_to_leave_question">Want to leave group?</string>
    <string name="dialog_stay">Stay</string>
    <string name="dialog_leave">Leave</string>
    <string name="dialog_you_are_still_in">You are still in :)</string>
    <string name="dialog_nothing_happened">Nothing happened :)</string>
    <string name="dialog_redact_question">Want to redact list?</string>
    <string name="dialog_redact_action_procesing">Processing...</string>
    <string name="dialog_resend_question">What to do?</string>
    <string name="Copy">Repeat</string>
    <string name="Download">Download</string>
    <string name="Cancel">Cancel</string>
    <string name="Resend_List">Send to group</string>
    <string name="resend_where_informer">Choose where to :)</string>
    <string name="list_copied_informer">List copied</string>
    <string name="dialog_kill_question">Want to kill list?</string>
    <string name="dialog_kill_action_processing">Processing...</string>
    <string name="list_downloaded_informer">List downloaded</string>
    <string name="dialog_confirm_question">Are you sure?</string>
    <string name="dialog_confirm_action_processing">Processing...</string>
    <string name="dialog_drop_history_question">This will delete your offline history forever</string>
    <string name="user_added_inormer">User already added</string>
    <string name="enter_user_id_informer">Enter any user id</string>
    <string name="not_removable_user_error">Can\'t remove this user :)</string>
    <string name="missing_value">Enter missing value</string>
    <string name="reinstall">Something went wrong. try To reinstall the app</string>
    <string name="values_format"> We need smth between 4 and 32 characters:(</string>
    <string name="no_internet">Some internet problems</string>
    <string name="wait_a_minute">Wait a minute, we haven\'t received your device id jet</string>
    <string name="by">By:</string>
    <string name="from">From:</string>
    <string name="your_list">Your list</string>
    <string name="no_lists">No lists</string>
    <string name="no_groups">No groups</string>
    <string name="profile">Profile</string>
    <string name="additional">Additional</string>
    <string name="enter_list_name">Enter list name</string>
    <string name="enter_store_name">Store and location</string>
    <string name="store_name_example">example: auchan Altufevo</string>
    <string name="enter_time">Cart ready at</string>
    <string name="store_time_example">example: friday 4:30 pm</string>
    <string name="store_name_note">note: at this moment we work only in Moscow</string>
    <string name="store_time_note">note: at least in 24 hours from now</string>
    <string name="list_item">list item</string>
    <string name="fill_store_and_time">Enter store and time</string>
</resources>
