<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:fitsSystemWindows="true"
    android:background="@color/elementLayoutColor1"
    tools:context="whobuys.vovch.vovch.light.activities.simple.CreateListogramActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_listogram_send_list_button"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:id="@+id/createlistogramscrollview"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:foreground="?attr/selectableItemBackground"
                card_view:cardUseCompatPadding="false"
                card_view:contentPaddingLeft="8dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPaddingBottom="8dp"
                card_view:contentPaddingRight="8dp"
                card_view:contentPaddingTop="8dp"
                card_view:cardElevation="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="0px"
                        android:layout_height="0px"/>
                    <EditText
                        android:id="@+id/create_listogram_store_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whoBuysGray"
                        android:textSize="18sp"
                        android:hint="@string/enter_store_name"
                        android:nextFocusUp="@id/create_listogram_store_name_edittext"
                        android:nextFocusLeft="@id/create_listogram_store_name_edittext"/>
                    <TextView
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:paddingLeft="4dp"
                        android:paddingStart="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whoBuysGray"
                        android:text="@string/store_name_example"
                        android:textSize="14sp"
                        android:alpha="0.5"/>
                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingStart="4dp"
                        android:textColor="@color/whoBuysGray"
                        android:text="@string/store_name_note"
                        android:textSize="10sp"
                        android:alpha="0.4"/>
                    <LinearLayout
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="0px"
                        android:layout_height="0px"/>
                    <EditText
                        android:layout_marginTop="8dp"
                        android:id="@+id/create_listogram_time_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whoBuysGray"
                        android:textSize="18sp"
                        android:hint="@string/enter_time"
                        android:nextFocusUp="@id/create_listogram_time_edittext"
                        android:nextFocusLeft="@id/create_listogram_time_edittext"/>
                    <TextView
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:paddingLeft="4dp"
                        android:paddingStart="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whoBuysGray"
                        android:text="@string/store_time_example"
                        android:textSize="14sp"
                        android:alpha="0.5"/>
                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="4dp"
                        android:paddingStart="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whoBuysGray"
                        android:text="@string/store_time_note"
                        android:textSize="10sp"
                        android:alpha="0.4"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical"
                android:layout_marginBottom="4dp"
                android:id="@+id/listogrampunctslayout">
            </LinearLayout>
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/add_plus_custom_green_white"
                app:fabSize="mini"
                android:id="@+id/create_listogram_add_punct_button"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_listogram_send_list_button"
        android:layout_marginBottom="96dp"
        android:layout_gravity="bottom|center"
        android:elevation="16dp"
        app:fabSize="normal"
        app:srcCompat="@mipmap/confirm_custom_green_white"/>
</android.support.design.widget.CoordinatorLayout>
