<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="whobuys.vovch.vovch.whobuys.activities.simple.ProfileActivity"
    android:background="@color/elementLayoutColor1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/elementLayoutColor1">
        <TextView
            android:id="@+id/profle_header_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/profile"
            android:maxLines="1"
            android:textAllCaps="false"
            android:textColor="@color/whoBuysGray"
            android:textSize="30sp"
            android:gravity="start"
            android:layout_gravity="center" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="72dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_gravity="start"
            android:layout_marginTop="24dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_gravity="start"
                android:gravity="start"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:textColor="@color/whoBuysGray"
                android:textSize="20sp"
                android:text="@string/login_hint"/>
            <TextView
                android:id="@+id/profile_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textAllCaps="false"
                android:layout_gravity="start"
                android:focusable="true"
                android:textIsSelectable="true"
                android:gravity="start"
                android:textAlignment="center"
                android:textColor="@color/whoBuysGray"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_gravity="start"
            android:layout_marginTop="24dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:gravity="start"
                android:layout_gravity="start"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:textColor="@color/whoBuysGray"
                android:textSize="20sp"
                android:text="@string/password_hint"/>
            <TextView
                android:id="@+id/profile_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textAllCaps="false"
                android:focusable="true"
                android:textIsSelectable="true"
                android:layout_gravity="start"
                android:gravity="start"
                android:textAlignment="center"
                android:textColor="@color/whoBuysGray"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_gravity="start"
            android:layout_marginTop="24dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:gravity="start"
                android:layout_gravity="start"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:textColor="@color/whoBuysGray"
                android:textSize="20sp"
                android:text="@string/id"/>
            <TextView
                android:id="@+id/profile_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textAllCaps="false"
                android:focusable="true"
                android:textIsSelectable="true"
                android:layout_gravity="start"
                android:gravity="start"
                android:textAlignment="center"
                android:textColor="@color/whoBuysGray"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>